# news-radar

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: SETUP.md
examples/: config.example.toml  feeds.example.csv
examples/cron/: newsradar-cron.example
examples/hooks/: git_publish.py
examples/launchd/: com.example.newsradar.plist.template
examples/topics/: ai.example.toml  robotics.example.toml
src/newsradar/: __init__.py  article_fetcher.py  cli.py  config.py  cover_generator.py  email_fetcher.py  enricher.py  feed_fetcher.py  html_generator.py  llm.py  output_writer.py  podcast_generator.py  podcast_rss.py  topics.py
src/newsradar/ad_detector/: AD_DETECTION.md  AdDetectorModelfile  __init__.py  compare_models.py  install.py  update_modelfile.py
tests/: conftest.py  test_ad_detector.py  test_classifier.py  test_enricher.py  test_podcast_generator.py  test_podcast_llm.py  test_podcast_rss.py
tests/test_data/: labeled_examples.json
